@@ -1,3 +1,8 @@
+2002-04-14  John Harper  <jsh@unfactored.org>
+
+	* widgets/list.jl: return false from button_press_event and
+	key_press_event handlers, fixes #75866
+
 2002-04-13  John Harper  <jsh@unfactored.org>
 
 	* stock.jl.gtk, stock.jl.gnome: s/gtk-signal-/g-signal/
